# espcd_baseline

./: README.md
libs/sharp/: pyproject.toml
libs/sharp/sharp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
libs/sharp/sharp/api/: __init__.py  novel_view.py  sharp_worker_server.py
libs/sharp/sharp/cli/: new_view_synthesis.py  predict.py  render.py
libs/vggt/: setup.py
libs/vggt/models/: vggt.py
libs/vggt/vggt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ml-sharp/: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  predict.zsh  pyproject.toml  render.zsh  render_free.zsh  requirements.txt
ml-sharp/src/sharp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml-sharp/src/sharp/cli/: __init__.py  novel_view_predict.py  novel_view_rendering.py
ml-sharp/src/sharp/utils/: camera.py  io.py
robopose/: environment.yaml  eval.zsh  job-runner-config.yaml  matched_triplets.csv  rclone.conf
robopose/notebooks/: generate_results.ipynb
robopose/robopose/scripts/: run_robot_eval.py
vggt/vggt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
